# rust-code

./: .gitignore  Cargo.toml  README.md  crates.md  docs.md
actix-demo/error-demo/: Cargo.toml
actix-demo/error-demo/src/: main.rs
actix-demo/extractors/: Cargo.toml
actix-demo/extractors/src/: main.rs
actix-demo/shared-state/: Cargo.toml
actix-demo/shared-state/src/: main.rs
async-demo/: Cargo.toml  README.md  docs.md
async-demo/async-std/: async-std1.rs  async-std2.rs  hello-world.rs  list-dir.rs  logging.rs  socket-timeouts.rs  stdin-echo.rs
async-demo/async-task/: spawn.rs
async-demo/async-testing/: Cargo.toml
async-demo/async-testing/src/: lib.rs
async-demo/async-web/: Cargo.toml
async-demo/async-web/src/: main.rs
async-demo/atomic/: README.md  atomic.rs
async-demo/future-executor/: future_executor.rs  future_timer.rs
async-demo/futures-rs/: Cargo.toml  futures.rs  futures1.rs  futures2.rs  futures3.rs  futures4.rs  futures5.rs
async-demo/futures-rs/src/: main.rs
async-demo/sinkhaha/: README.md  async-io-trait.rs  async-io.rs  async-test1.rs  async-test2.rs  block-async-task.rs  pow.rs  self-ref-pin.rs  self-ref.rs  stream1.rs  stream2.rs  sync-io.rs  tcp-listener.rs  thread-io.rs  tokio-mutex.rs
async-demo/src/: main.rs
async-demo/threads/: mpsc.rs  send-sync.md  thread1.rs  threadpool.rs
async-demo/timer_future/src/: lib.rs  main.rs
async-demo/tokio/async-io/: read.rs  seek.rs  stream.rs  write.rs
async-demo/tokio/async-io/tcp-server/: Cargo.toml
async-demo/tokio/channel/: broadcast1.rs  mpsc1.rs
async-demo/tokio/examples/connect/: Cargo.toml
async-demo/tokio/examples/echo/: Cargo.toml
async-demo/tokio/examples/echo-udp/: Cargo.toml
async-demo/tokio/net/: ip_socket.rs  peek.rs  read.rs  read1.rs  split.rs
async-demo/tokio/runtime/: block_on.rs  block_thread.rs  drop_rt1.rs  enter.rs  rt1.rs  rt_handle.rs
async-demo/tokio/sync/: mutex.rs  mutex1.rs  notify.rs  rwlock.rs  semaphore.rs
async-demo/tokio/task/: abort.rs  join.rs  local_set2.rs  local_set3.rs  local_set4.rs  task1.rs  try_join.rs
async-demo/tokio/timer/: interval2.rs  interval3.rs  sleep.rs  sleep1.rs
axum-demo/: Cargo.toml  README.md
axum-demo/anyhow-error-response/: Cargo.toml
axum-demo/anyhow-error-response/src/: main.rs
axum-demo/async-graphql/: README.md
axum-demo/axum-tonic-server/: Cargo.toml  README.md
axum-demo/axum-tonic-server/src/: main.rs  multiplex_service.rs
axum-demo/error-handler/: Cargo.toml
axum-demo/error-handler/src/: main.rs
axum-demo/form/: Cargo.toml
axum-demo/form/src/: main.rs
axum-demo/generate-random-number/src/: main.rs
axum-demo/global-404-handler/: Cargo.toml
axum-demo/global-404-handler/src/: main.rs
axum-demo/handle-head-request/: Cargo.toml
axum-demo/handle-head-request/src/: main.rs
axum-demo/hello-world/: Cargo.toml
axum-demo/hello-world/src/: main.rs
axum-demo/include-html/: index.html
axum-demo/include-html/src/: main.rs
axum-demo/middleware/: Cargo.toml
axum-demo/middleware/src/: main.rs
axum-demo/readme/: Cargo.toml
axum-demo/readme/src/: main.rs
axum-demo/share-state/: Cargo.toml
axum-demo/share-state/src/: main.rs
axum-demo/testing-websockets/: Cargo.toml
axum-demo/testing-websockets/src/: main.rs
axum-demo/tower-handler/: Cargo.toml
axum-demo/tower-handler/src/: main.rs
database/mysql/sqlx-demo/: .env  Cargo.toml
database/mysql/sqlx-example-mysql-todos/: .env  Cargo.toml  README.md
database/sled-demo/: Cargo.toml  README.md
database/sled-demo/examples/: playground.rs  structured.rs
database/sled-demo/my_database/: db
grpc-demo/multiplex/: Cargo.toml  build.rs
grpc-demo/multiplex/protos/: hello.proto  hello.rs  voting.proto  voting.rs
grpc-demo/multiplex/src/: client.rs  server.rs
http-demo/reqwest-demo/: Cargo.toml  README.md
http-demo/reqwest-demo/examples/: blocking.rs  github_gists.rs  github_user.rs  http_range.rs  page.rs  paste.rs  rate_limited.rs  req_header.rs
http-demo/reqwest-demo/src/: main.rs
http-demo/rust-web/stage4/: Cargo.toml
http-demo/stage3/: Cargo.toml
projects/macro-demo/: Cargo.toml
projects/macro-demo/tests/: macro_test.rs
runoob/: cmd.rs  (+23 more)
salvo-demo/oapi-todos/: Cargo.toml
salvo-demo/oapi-todos/src/: main.rs
salvo-demo/request-id/: Cargo.toml
salvo-demo/request-id/src/: main.rs
tide-demo/state/: Cargo.toml
tide-demo/state/src/: main.rs
tokio-demo/: Cargo.toml  README.md
tokio-demo/async-io/tcp-client/: Cargo.toml
tokio-demo/channel/: mpsc.rs  oneshot.rs
tokio-demo/examples/: async_channel.rs  broadcast.rs  crossbeam_channel.rs  mpsc.rs  oneshot.rs  read_file.rs  read_file1.rs  select.rs  signal.rs  stream.rs  tcp_client.rs  tcp_server.rs  tracing.rs  watch.rs  write_file.rs
tokio-demo/examples/udp-client/: Cargo.toml
tokio-demo/runtime/: drop_rt.rs  main_macro.rs  spawn.rs
tokio-demo/sync/: barrier.rs  dead_lock.rs
tokio-demo/task/: is_finished.rs  join_set.rs  local_set1.rs  select1.rs
tools/config-file/: Cargo.toml
tools/config-file/src/: settings.rs
tools/encode-demo/: Cargo.toml
tools/encode-demo/examples/: base64_demo.rs  byteorder.rs  form_urlencode.rs  hex_demo.rs  precent_encode.rs
tools/errorchain-demo/: Cargo.toml
tools/errorchain-demo/examples/: demo1.rs  demo2.rs  demo3.rs
tools/math-demo/: Cargo.toml
tools/math-demo/examples/: add_matrices.rs  central_tendency.rs  central_tendency1.rs  central_tendency2.rs  complex.rs  deserialize_matrix.rs  invert_matrix.rs  latitude_longitude.rs  multiply_matrices.rs  multiply_scalar_vector_matrix.rs  side_length.rs  standard_deviation.rs  tan_sin_cos.rs  vector_comparison.rs  vector_norm.rs
tools/url-catch/: Cargo.toml
tools/url-catch/examples/: base_url.rs  check_links.rs  extract_links.rs  mime_filename.rs  mime_response.rs  mime_string.rs  new_url.rs  parse_url.rs  unique_links.rs
tutorial/parallel-demo/: Cargo.toml
tutorial/parallel-demo/src/: main.rs
tutorial/waitgroup/: Cargo.toml  README.md
tutorial/waitgroup/examples/: async_demo.rs
wrap-demo/body/: Cargo.toml
wrap-demo/body/src/: main.rs
(+730 files in other folders)
