[workspace]
members = [
    "timer_future",
    "futures-rs",
    "async-testing",
    "async-web",
]
resolver = "2"

#[package]
#name = "async-demo"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#anyhow = "1.0.72"
#async-std = "1.12.0"
#async-task = "4.4.0"
#blake3 = "1.4.1"
#bytes = "1.4.0"
#chrono = "0.4.26"
#femme = "2.2.1"
#flume = "0.10.14"
#futures = { version="0.3.28", features = ["thread-pool"] }
#futures-util = "0.3.28"
#log = "0.4.19"
#once_cell = "1.18.0"
#pin-project = "1.1.3"
#rayon = "1.7.0"
#serde_yaml = "0.9.25"
#smol = "1.3.0"
#surf = "2.3.2"
#threadpool = "1.8.1"
#tokio = { version="1.29.1", features = ["full"]}
#tokio-stream = "0.1.14"
#tokio-util = { version="0.7.8", features = ["full"]}
#toml = "0.7.6"

#[dependencies.reqwest]
#version = "0.11"
#features = ["blocking"]

