[workspace]
members = [
    "hello-world",
    "generate-random-number",
    "include-html",
    "handle-head-request",
    "readme",
    "global-404-handler",
    "error-handler",
    "middleware",
    "tower-handler",
    "share-state",
    "testing-websockets",
    "anyhow-error-response",
    "form",
    "axum-tonic-server",
]
resolver = "2"