[package]
name = "extractors"
version = "0.1.0"
edition = "2021"

default-run = "extractors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3.28"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

#cargo run —-bin NAME
[[bin]]
name = "extractors1"
path = "src/bin/extractors1.rs"

[[bin]]
name = "extractors2"
path = "src/bin/extractors2.rs"
