[package]
name = "shared-state"
version = "0.1.0"
edition = "2021"

default-run = "shared-state"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

[[bin]]
name = "state1"
path = "src/bin/state1.rs"

[[bin]]
name = "state2"
path = "src/bin/state2.rs"
