[package]
name = "futures-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "futures-rs"

[dependencies]
async-std = { version = "1.12.0", features = ["unstable", "async-attributes", "attributes", "futures-core"] }
futures = { version = "0.3.30", features = ["thread-pool", "futures-executor"] }
