[package]
name = "error-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7"
serde = { version = "1.0.194", features = ["derive", "alloc"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
