[package]
name = "multiplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.12.0", features = ["default"] }
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.10.0", features = ["default"] }

[build-dependencies]
tonic-build = "0.10.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
