[package]
name = "reqwest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
error-chain = "0.12.4"
hyper = { version = "1.2.0", features = ["client", "full"] }
reqwest = { version = "0.12.2", features = ["blocking", "json", "cookies", "stream"] }
reqwest_cookie_store = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
