[package]
name = "macro-demo"
version = "0.1.0"
edition = "2021"

[lib]
# 表示该crate将编译为一个过程宏库
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.81",features=["full","fold"]}
quote = "1.0.10"
json = "0.12.4"
