[package]
name = "config_file"
version = "0.1.0"
edition = "2021"
authors = ["1294851990@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

config = "0.13.1"
toml = "0.5.9"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
