[package]
name = "encode-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
byteorder = "1.5.0"
data-encoding = "2.5.0"
error-chain = "0.12.4"
percent-encoding = "2.3.1"
url = "2.5.0"
