[package]
name = "errorchain-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
error-chain = "0.12.4"
reqwest = { version = "0.12.1", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
