[package]
name = "math-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
nalgebra = "0.32.5"
ndarray = { version = "0.15.6" }
num = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
