[package]
name = "url-catch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
lazy_static = "1.4.0"
mime = "0.3.17"
regex = "1.10.4"
reqwest = "0.12.2"
select = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
