[package]
name = "parallel-demo"
version = "0.1.0"
edition = "2021"

default-run = "parallel-demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "crossbeam-deque", "crossbeam-epoch", "crossbeam-queue"] }
crossbeam-channel = "0.5.12"
error-chain = "0.12.4"
glob = "0.3.1"
image = "0.25.0"
lazy_static = "1.4.0"
num = "0.4.1"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.9.0"
ring = "0.17.8"
threadpool = "1.8.1"
walkdir = "2.5.0"
