[package]
name = "body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
