[package]
name = "stage4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"]}
serde = { version = "1.0.140", features = ["derive"]}
sqlx = {version = "0.7.2", default_features = false, features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}